Name:                   lh-bug
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Foo
  Other-Modules:        Foo.Internal
  Build-Depends:        base >= 4.8 && < 5
                      , unordered-containers

Source-Repository head
  Type:                 git
--  Location:
